added tests for booking service, payment service and validationutils